# LP_esame_ls

./: CMakeLists.txt  Item.h  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  ItemTest.cpp  ObserverTest.cpp  ShoppingListFixture.cpp  UserFixture.cpp  run_all_tests.cpp
